--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,13 @@
 
 :root {
     --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
+    --background-start-rgb: 255, 255, 255;
     --background-end-rgb: 255, 255, 255;
 }
 
+#__next {
+    height: 100%;
+}
 
 body {
     color: rgb(var(--foreground-rgb));
@@ -17,4 +20,5 @@ body {
             rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    height: 100vh;
 }
