--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,14 @@ body {
     rgb(var(--background-start-rgb));
     height: 100vh;
 }
+
+@layer utilities {
+    .hidden-scrollbar {
+        -ms-overflow-style: none; /* IE, Edge 対応 */
+        scrollbar-width: none; /* Firefox 対応 */
+    }
+    .hidden-scrollbar::-webkit-scrollbar {
+        /* Chrome, Safari 対応 */
+        display: none;
+    }
+}
